# jaxgm

./: .devcontainer.json  .dockerignore  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.devcontainer/cpu/: devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
examples/: concentrated_distribution.py  gaussian.py  lie.py
jaxgm/: __init__.py  _adjoint.py  _coordinates.py  _dynamics.py  _grad.py  _interpolation.py  _lie_algebra.py  _lie_group.py  _measures.py  _random.py  _rotation.py  grad.py  lie_algebra.py  lie_group.py  rotation.py
jaxgm/linalg/: __init__.py  _logm.py  _matfuncs.py  _norm.py  _vecfuncs.py
jaxgm/nn/: __init__.py  _loss.py
jaxgm/random/: __init__.py  _gaussian.py
