[build-system]
requires = ["flit_core >=3.8.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jaxgm"
version = "0.0.1"
description = "A simple package for geometric mechanics with Jax"
authors = [{ name = 'Evan Palmer', email = 'evanp922@gmail.com' }]
requires-python = ">=3.10"
dependencies = ["jax", "equinox", "beartype", "jaxtyping", "diffrax"]

[tool.ruff]
line-length = 88
target-version = 'py312'
fix = true
